--- a/test-containers/schedulers/torque/Dockerfile
+++ b/test-containers/schedulers/torque/Dockerfile
@@ -11,7 +11,7 @@
 # docker run -h docker -i     \
 #            -p 10022:22                  \ # SSHD, SFTP
 #            -p 9618:9618                 \ # PBS
-#            agaveapi/sge
+#            agaveapi/pbs
 #
 # https://bitbucket.org/taccaci/agave-environment
 #
@@ -24,9 +24,12 @@ MAINTAINER Rion Dooley <dooley@tacc.utexas.edu>
 # Install slurm
 RUN yum -y --enablerepo=centosplus install make perl-CPAN openssl-devel libxml2-devel boost-devel gcc gcc-c++ git tar libtool vim-minimal
 
+WORKDIR /usr/local
+
 # Pull torque
 RUN git clone https://github.com/adaptivecomputing/torque.git -b 5.0.0 5.0.0
-WORKDIR 5.0.0
+
+WORKDIR /usr/local/5.0.0
 RUN ./autogen.sh
 
 # Build Torque
@@ -37,34 +40,42 @@ RUN cp contrib/init.d/trqauthd /etc/init.d/
 RUN cp contrib/init.d/pbs_mom /etc/init.d/pbs_mom
 RUN cp contrib/init.d/pbs_server /etc/init.d/pbs_server
 RUN cp contrib/init.d/pbs_sched /etc/init.d/pbs_sched
-#RUN echo /usr/local/lib > /etc/ld.so.conf.d
 RUN ldconfig
 
 # Configure Torque
-RUN echo "docker" > /var/spool/torque/server_name
+RUN echo "localhost" > /var/spool/torque/server_name
 RUN echo '/usr/local/lib' > /etc/ld.so.conf.d/torque.conf
 RUN ldconfig
-hostRUN trqauthd start && \
-    ./torque.setup root && \
-    qterm -t quick && \
-    pbs_server && \
+ENV HOSTNAME localhost
+
+RUN cat /etc/hosts
+ADD torque/torque.setup /usr/local/5.0.0/torque.setup
+RUN trqauthd start && \
+    ./torque.setup root localhost && \
     pbs_mom && pbs_sched && \
     qmgr -c "create queue debug queue_type=execution" && \
     qmgr -c "set queue debug enabled=true" && \
     qmgr -c "set queue debug started=true" && \
-    qmgr -c "set server scheduling=True"
+    qmgr -c "set server scheduling=True" && \
+    qmgr -c 'set queue batch resources_default.walltime = 48:00:00' && \
+    qmgr -c 'set queue batch resources_default.nodes = 1' && \
+    qmgr -c 'set server default_queue = debug'
 
-RUN echo "docker.example.com np=1" >> /var/spool/torque/server_priv/nodes
-RUN printf "\$pbsserver docker" >> /var/spool/torque/mom_priv/config
-
+RUN echo "localhost np=1" >> /var/spool/torque/server_priv/nodes
+RUN echo "docker np=1" >> /var/spool/torque/server_priv/nodes
+RUN printf "\$pbsserver localhost" >> /var/spool/torque/mom_priv/config
 
 # Add in a test submit script
-ADD pbs/pbs.submit /home/testuser/pbs.submit
-RUN chown testuser:testuser /home/testuser/pbs.submit
+ADD torque/torque.submit /home/testuser/torque.submit
+RUN chown testuser:testuser /home/testuser/torque.submit
 
 ADD supervisord.conf /etc/supervisord.conf
 RUN mkdir /var/log/supervisor
 RUN chmod -R 777 /var/log/supervisor
 
-EXPOSE 10389 22 15003 15001 1024
-CMD /usr/bin/supervisord
+# Add entrypoint script to set the current hostname so the scheduler can communicat
+ADD docker_entrypoint.sh /docker_entrypoint.sh
+
+ENTRYPOINT [ "/docker_entrypoint.sh" ]
+EXPOSE 10389 22 9618
+CMD ["/usr/bin/supervisord"]
