--- a/test-containers/schedulers/torque/supervisord.conf
+++ b/test-containers/schedulers/torque/supervisord.conf
@@ -7,38 +7,25 @@ logfile = /var/log/supervisor/sshd.log
 autorestart=true
 
 [program:trqauthd]
-command=/usr/sbin/trqauthd
+command=/usr/local/sbin/trqauthd -D
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
-autorestart=false
 autostart=true
-autorestart=false
-startretries=0
-stopwaitsecs=1
-exitcodes=0,1,2
 
 [program:pbsmom]
-command=/usr/sbin/pbs_mom
+command=/usr/local/sbin/pbs_mom -D -L /var/log/supervisor/%(program_name)s.log
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autostart=true
-autorestart=false
-startretries=0
-stopwaitsecs=1
-exitcodes=0,1,2
 
 [program:pbsserver]
-command=/usr/sbin/pbs_server
+command=/usr/local/sbin/pbs_server -D -L /var/log/supervisor/%(program_name)s.log
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autostart=true
-autorestart=false
-startretries=0
-stopwaitsecs=1
-exitcodes=0,1,2
 
 [program:pbssched]
-command=/usr/sbin/pbs_sched
+command=/usr/local/sbin/pbs_sched -p /var/log/supervisor/%(program_name)s.log -L /var/log/supervisor/%(program_name)s.log
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autostart=true
