Fixing invocation commands in Dockerfile comments of schedulers. Renamed sge folder to gridengine and added Open Grid Engine scheduler image with updated readme and Dockerfile. This builds from YUM epel

--- a/test-containers/schedulers/htcondor/Dockerfile
+++ b/test-containers/schedulers/htcondor/Dockerfile
@@ -8,7 +8,7 @@
 # image. Nothing special here.
 #
 # Usage:
-# docker run -h docker.example.com -i     \
+# docker run -h docker.example.com -i -t  \
 #            -p 10022:22                  \ # SSHD, SFTP
 #            agaveapi/htcondor
 #
