Updating pure-ftpd image with 100 available exposed channel ports, anonymous access, and full anonymous access for testing. Readme reflects changes.

--- a/test-containers/storage/ftp/supervisord.conf
+++ b/test-containers/storage/ftp/supervisord.conf
@@ -1,12 +1,17 @@
 [supervisord]
 nodaemon = true
 
+[program:rsyslogd]
+command = rsyslogd
+logfile = /var/log/supervisor/rsyslog.log
+autorestart=false
+
 [program:sshd]
 command = /usr/sbin/sshd -D
 logfile = /var/log/supervisor/sshd.log
 autorestart=true
 
 [program:ftpd]
-command = /usr/local/sbin/pure-ftpd -c 100 -C 100 -E -H -z -l unix
+command = /usr/local/sbin/pure-ftpd -c 100 -C 100 -z -l unix -p 30000:30099 -H -D -d -j -M
 logfile = /var/log/supervisor/ftpd.log
 autorestart=true
